; ModuleID = '/home/carl/AnghaBench/memcached/extr_thread.c_item_get_locked.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_thread.c_item_get_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @item_get_locked(i8* %0, i64 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @hash(i8* %12, i64 %13)
  %15 = load i32*, i32** %10, align 8
  store i32 %14, i32* %15, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @item_lock(i32 %17)
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32* @do_item_get(i8* %19, i64 %20, i32 %22, i32* %23, i32 %24)
  store i32* %25, i32** %11, align 8
  %26 = load i32*, i32** %11, align 8
  ret i32* %26
}

declare dso_local i32 @hash(i8*, i64) #1

declare dso_local i32 @item_lock(i32) #1

declare dso_local i32* @do_item_get(i8*, i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
